# open-runo

./: .env.example  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  PORTING.md  README-Arabic.md  README-Chinese.md  README-English.md  README-France.md  README-Germany.md  README-Italy.md  README-Japan.md  README-Korea.md  README-Russia.md  README-Spain.md  README.md
.github/workflows/: ci.yml  release.yml
apps/desktop-tray/: .gitignore  Cargo.toml  README.md
apps/desktop-tray/installer/: open-runo-tray.iss
apps/desktop-tray/src/: main.rs
apps/desktop-wasm/: Cargo.toml
apps/desktop-wasm/src/: api.rs  lib.rs  notifications.rs  pages.rs
apps/desktop-wasm/www/: index.html  manifest.json
crates/open-runo-api-types/: Cargo.toml
crates/open-runo-api-types/src/: lib.rs
crates/open-runo-appserver/: Cargo.toml
crates/open-runo-appserver/src/: lib.rs  proxy.rs  server.rs  tenant_bridge.rs
crates/open-runo-cache/: Cargo.toml
crates/open-runo-cli/: Cargo.toml
crates/open-runo-cli/src/: main.rs
crates/open-runo-core/src/: lib.rs
crates/open-runo-db/: Cargo.toml
crates/open-runo-db/src/: federated_config.rs  lib.rs  migration.rs
crates/open-runo-db/tests/: aruaru_as_of_commit.rs
crates/open-runo-feature-flags/: Cargo.toml
crates/open-runo-feature-flags/src/: lib.rs
crates/open-runo-federation/src/: lib.rs  sdl.rs
crates/open-runo-gateway/: Cargo.toml
crates/open-runo-gateway/src/: graphql_hyper.rs  lib.rs  main.rs  ssr.rs
crates/open-runo-observability/: Cargo.toml
crates/open-runo-observability/src/: lib.rs  request_metrics.rs
crates/open-runo-rjson/: Cargo.toml
crates/open-runo-rjson/src/: lib.rs
crates/open-runo-router/: Cargo.toml
crates/open-runo-router/src/: acme.rs  audit.rs  auth_hyper.rs  edfs.rs  grpc.rs  handlers_hyper.rs  hyper_compat.rs  lib.rs  main.rs  mcp.rs  middleware_hyper.rs  openapi.rs  session.rs  state.rs  validation.rs
crates/open-runo-rustjson/: Cargo.toml
crates/open-runo-rustjson/src/: lib.rs
crates/open-runo-security/: Cargo.toml
crates/open-runo-security/src/: lib.rs
crates/open-runo-view/: Cargo.toml
crates/open-runo-view/src/: dom.rs  hooks.rs  lib.rs  ssr.rs
docs/: HANDOFF.md  api-examples.md  api-spec.md  architecture.md  cosmo-parity.md  deployment-scaling.md  federation.md  poem-parity.md  rjson.md  rustjson.md  tauri-parity.md
