[workspace]

[package]
name = "open-runo-desktop-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["open-runo Contributors"]
license = "Apache-2.0 OR MIT"
description = "open-runo desktop frontend: Rust compiled to WebAssembly, no Tauri/Node.js/TypeScript build chain."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "NodeList",
    "Window",
    "console",
    "Event",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Storage",
    "File",
    "FileList",
    "FormData",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
open-runo-api-types = { path = "../../crates/open-runo-api-types" }

[profile.release]
opt-level = "s"
lto = true
