[package]
name = "open-runo-feature-flags"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "open-runo Feature Flags: Cosmo Enterprise parity for canary releases and percentage-based traffic routing, shipped as OSS"

[lints]
workspace = true

[dependencies]
open-runo-core = { workspace = true }
serde         = { workspace = true }
