[package]
name = "open-runo-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "open-runo Observability System: tracing/metrics initialization and lightweight in-process counters"

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
clickhouse = { version = "0.13", optional = true, features = ["chrono"] }

[features]
clickhouse = ["dep:clickhouse"]
