[package]
name = "open-runo-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "open-runo Gateway Router: tokio/hyper HTTP entrypoint, health checks, and middleware pipeline (poem remains only as an internal dependency of the HTML page-cache middleware)"

[lints]
workspace = true

[[bin]]
name = "open-runo-router"
path = "src/main.rs"

[dependencies]
open-runo-core             = { workspace = true }
open-runo-observability    = { workspace = true }
open-runo-security         = { workspace = true }
open-runo-federation       = { workspace = true }
open-runo-schema-registry  = { workspace = true }
open-runo-ai-routing       = { workspace = true }
open-runo-history          = { workspace = true }
open-runo-persisted-queries = { workspace = true }
open-runo-scim             = { workspace = true }
open-runo-cache            = { workspace = true }
open-runo-api-types        = { workspace = true }
open-runo-feature-flags    = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
open-runo-db               = { workspace = true }
poem = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
jsonschema = { workspace = true }
once_cell = { workspace = true }
hyper = { version = "1.10", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.9"
flate2 = { workspace = true }

[dev-dependencies]
jsonwebtoken = { workspace = true }
poem = { workspace = true, features = ["test"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Test-only WebSocket client, purely to independently verify the from-scratch
# server-side RFC 6455 implementation in `hyper_compat` (see
# `handlers_hyper::tests::websocket_echo_round_trip_over_real_tcp`). Not used
# by any production code path -- the server side is hand-rolled.
tokio-tungstenite = "0.24"
