[package]
name = "open-runo-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "open-runo Gateway Router: tokio/hyper HTTP entrypoint, health checks, and middleware pipeline (poem remains only as an internal dependency of the HTML page-cache middleware)"

[lints]
workspace = true

[[bin]]
name = "open-runo-router"
path = "src/main.rs"

[dependencies]
open-runo-core             = { workspace = true }
open-runo-observability    = { workspace = true }
open-runo-security         = { workspace = true }
open-runo-federation       = { workspace = true }
open-runo-schema-registry  = { workspace = true }
open-runo-ai-routing       = { workspace = true }
open-runo-history          = { workspace = true }
open-runo-persisted-queries = { workspace = true }
open-runo-scim             = { workspace = true }
open-runo-cache            = { workspace = true }
open-runo-api-types        = { workspace = true }
open-runo-feature-flags    = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
open-runo-db               = { workspace = true }
poem = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
jsonschema = { workspace = true }
once_cell = { workspace = true }
hyper = { version = "1.10", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.9"
flate2 = { workspace = true }
# Poem-parity: TLS termination (`hyper_compat::tls`), opt-in via the `tls`
# feature so a deployment that terminates TLS at a reverse proxy (the
# existing default assumption) doesn't pull in a TLS stack it never uses.
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = { version = "2.2", optional = true }
# Poem-parity: ACME (docs/poem-parity.md). `ring` provides the audited
# ES256 (ECDSA P-256/SHA-256) signing primitive for JWS -- the ACME
# *protocol* (directory/nonce/account/order/challenge state machine, JWS
# envelope construction) is hand-rolled the same way this crate hand-rolls
# WebSocket framing and multipart parsing, but the actual cryptographic
# signing operation is delegated to an audited library rather than
# reimplemented, matching this codebase's existing sha1/sha2 boundary.
# `reqwest` is the outbound client (the ACME CA is called *by* this
# process, unlike every other dependency here which serves inbound
# requests) -- already present transitively via
# open-runo-observability's OTLP exporter, so this isn't a wholly new
# addition to the binary's dependency graph. `rcgen` builds the CSR
# submitted at order-finalization time (promoted here from dev-only,
# where it already existed for TLS test certificates).
ring = { version = "0.17", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
rcgen = { version = "0.13", optional = true }
# EDFS (Event-Driven Federated Subscriptions, Cosmo-parity gap,
# docs/cosmo-parity.md 4a): bridges the existing in-process
# `broadcast::Sender<SchemaEvent>` (crates/open-runo-router/src/edfs.rs)
# across processes via Redis Pub/Sub, so GraphQL Subscriptions work in a
# multi-instance/load-balanced deployment, not just within a single
# process. Reuses the same `redis` version open-runo-cache's
# `redis-backend` feature already depends on.
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
anyhow = { workspace = true, optional = true }

[features]
tls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]
acme = ["tls", "dep:ring", "dep:reqwest", "dep:rcgen"]
edfs = ["dep:redis", "dep:anyhow"]
# Request-metrics export to ClickHouse (docs/cosmo-parity.md 4a: monthly
# request-count metering + operations analytics). Off by default -- the
# in-process aggregates `open_runo_observability::RequestMetrics` still
# collects and serves via `/api/analytics/*` regardless of this feature;
# it only gates the buffered `ClickHouseSink` export path.
clickhouse = ["open-runo-observability/clickhouse"]

[dev-dependencies]
jsonwebtoken = { workspace = true }
poem = { workspace = true, features = ["test"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
# Test-only WebSocket client, purely to independently verify the from-scratch
# server-side RFC 6455 implementation in `hyper_compat` (see
# `handlers_hyper::tests::websocket_echo_round_trip_over_real_tcp`). Not used
# by any production code path -- the server side is hand-rolled.
tokio-tungstenite = "0.24"
# Test-only: generates a throwaway self-signed cert/key pair so
# `hyper_compat::tls` can be verified end-to-end over a real TLS handshake
# without checking a certificate into the repo. Not used by production code.
rcgen = "0.13"
