[package]
name = "open-runo-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "open-runo Security Layer: authentication, authorization, API key handling, and rate limiting"

[lints]
workspace = true

[dependencies]
open-runo-core = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
# Distributed rate limiting (docs/deployment-scaling.md's known gap: rate
# limit state is per-instance in-memory otherwise). Same version as
# open-runo-cache's `redis-backend` feature. Optional so single-instance
# deployments don't pull in a Redis client they never use.
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "script"], optional = true }

[features]
redis-backend = ["dep:redis"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
